fixed some layout issues and more styling

--- a/Characters/style.css
+++ b/Characters/style.css
@@ -3,10 +3,15 @@
     padding: 0;
     box-sizing: border-box;
   }
+  header {
+    display: flex;
+    justify-content: center;
+  }
   
   main {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     
   }
   
