--- a/Congress/style.css
+++ b/Congress/style.css
@@ -14,11 +14,21 @@
    padding-bottom: 1rem;
  }
  
+ h3 {
+  text-align: center;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+}
+ 
  button {
   width: 225px;
   height: 80px;
   font-size: 28px;
-  margin: 20px;
+  margin-left: .2in;
+  margin-right: .2in;
   background-color: lightgray;
   color: #000;
   border-radius: 5px;
@@ -30,7 +40,7 @@ button:hover {
   border-radius: 5px;
   cursor: pointer;
 }
- 
+
 .loyaltyList {
   display: flex;
   justify-content: space-between;
@@ -39,11 +49,15 @@ button:hover {
   .senatorsDiv {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
   }
   .senatorsDiv img {
     border: lightgray solid;
     border-radius: 1rem;
     padding: 0%;
+  }
+  .senatorsDiv img:hover{
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.74);
   }
   .senatorsDiv figcaption {
  text-align: center;
