--- a/films/film-styles.css
+++ b/films/film-styles.css
@@ -11,6 +11,7 @@
   main {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     
   }
   figure {
@@ -23,6 +24,9 @@
     max-height: 25rem;
     border: #97A6A0 solid;
     border-radius: 1rem;
+  }
+  figure img:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.644);
   }
   footer {
     display: flex;
